goit-markup-hw-04

--- a/index.html
+++ b/index.html
@@ -118,26 +118,36 @@
                     <div class="text-position ">
                         <h3 class="position-title">Mark Guerrero</h3>
                         <p class="text-team">Product Designer</p>
-                        <a class="social-networks" href="">
-                            <svg class="team-icon">
-                                <use href="./images/icons.svg#icon-instagram" ></use>
-                            </svg>
-                        </a>
-                        <a class="social-networks" href="">
-                            <svg class="team-icon">
-                                <use href="./images/icons.svg#icon-twiter" ></use>
-                            </svg>
-                        </a>
-                        <a class="social-networks" href="">
-                            <svg class="team-icon">
-                                <use href="./images/icons.svg#icon-facebook" ></use>
-                            </svg>
-                        </a>
-                        <a class="social-networks" href="">
-                            <svg class="team-icon">
-                                <use href="./images/icons.svg#icon-in" ></use>
-                            </svg>
-                        </a>    
+                        <ul class="team-list">
+                             <li class="social-team ">
+                                 <a class="social-networks" href="">
+                                     <svg class="team-icon">
+                                        <use href="./images/icons.svg#icon-instagram" ></use>
+                                     </svg>
+                                 </a>
+                            </li>
+                            <li class="social-team ">
+                                <a class="social-networks" href="">
+                                    <svg class="team-icon">
+                                        <use href="./images/icons.svg#icon-twiter" ></use>
+                                    </svg>
+                                </a>
+                           </li>
+                           <li  class="social-team">
+                                 <a class="social-networks" href="">
+                                     <svg class="team-icon">
+                                        <use href="./images/icons.svg#icon-facebook" ></use>
+                                     </svg>
+                                 </a>
+                            </li>
+                            <li  class="social-team">
+                                <a class="social-networks" href="">
+                                    <svg class="team-icon">
+                                        <use href="./images/icons.svg#icon-in" ></use>
+                                    </svg>
+                                </a>  
+                            </li>
+                        </ul>  
                     </div>
                     </li>
                     <li class=" foto-team">
@@ -145,26 +155,36 @@
                     <div class="text-position ">
                         <h3 class="position-title">Tom Ford</h3>
                         <p class="text-team">Frontend Developer</p>
-                        <a class="social-networks" href="">
-                            <svg class="team-icon">
-                                <use href="./images/icons.svg#icon-instagram" ></use>
-                            </svg>
-                        </a>
-                        <a class="social-networks" href="">
-                            <svg class="team-icon">
-                                <use href="./images/icons.svg#icon-twiter" ></use>
-                            </svg>
-                        </a>
-                        <a class="social-networks" href="">
-                            <svg class="team-icon">
-                                <use href="./images/icons.svg#icon-facebook" ></use>
-                            </svg>
-                        </a>
-                        <a class="social-networks" href="">
-                            <svg class="team-icon">
-                                <use href="./images/icons.svg#icon-in" ></use>
-                            </svg>
-                        </a>    
+                        <ul class="team-list">
+                            <li class="social-team ">
+                                <a class="social-networks" href="">
+                                    <svg class="team-icon"  width="16px"  height="16px">
+                                       <use href="./images/icons.svg#icon-instagram" ></use>
+                                    </svg>
+                                </a>
+                           </li>
+                           <li class="social-team ">
+                               <a class="social-networks" href="">
+                                   <svg class="team-icon">
+                                       <use href="./images/icons.svg#icon-twiter" ></use>
+                                   </svg>
+                               </a>
+                          </li>
+                          <li  class="social-team">
+                                <a class="social-networks" href="">
+                                    <svg class="team-icon">
+                                       <use href="./images/icons.svg#icon-facebook" ></use>
+                                    </svg>
+                                </a>
+                           </li>
+                           <li  class="social-team">
+                               <a class="social-networks" href="">
+                                   <svg class="team-icon">
+                                       <use href="./images/icons.svg#icon-in" ></use>
+                                   </svg>
+                               </a>  
+                           </li>
+                       </ul>  
                     </div>
                     </li>
                     <li class=" foto-team">
@@ -172,26 +192,36 @@
                     <div class="text-position ">
                         <h3 class="position-title">Camila Garcia</h3>
                         <p class="text-team" >Marketing</p>
-                        <a class="social-networks" href="">
-                            <svg class="team-icon">
-                                <use href="./images/icons.svg#icon-instagram" ></use>
-                            </svg>
-                        </a>
-                        <a class="social-networks" href="">
-                            <svg class="team-icon">
-                                <use href="./images/icons.svg#icon-twiter" ></use>
-                            </svg>
-                        </a>
-                        <a class="social-networks" href="">
-                            <svg class="team-icon">
-                                <use href="./images/icons.svg#icon-facebook" ></use>
-                            </svg>
-                        </a>
-                        <a class="social-networks" href="">
-                            <svg class="team-icon">
-                                <use href="./images/icons.svg#icon-in" ></use>
-                            </svg>
-                        </a>    
+                        <ul class="team-list">
+                            <li class="social-team ">
+                                <a class="social-networks" href="">
+                                    <svg class="team-icon">
+                                       <use href="./images/icons.svg#icon-instagram" ></use>
+                                    </svg>
+                                </a>
+                           </li>
+                           <li class="social-team ">
+                               <a class="social-networks" href="">
+                                   <svg class="team-icon">
+                                       <use href="./images/icons.svg#icon-twiter" ></use>
+                                   </svg>
+                               </a>
+                          </li>
+                          <li  class="social-team">
+                                <a class="social-networks" href="">
+                                    <svg class="team-icon">
+                                       <use href="./images/icons.svg#icon-facebook" ></use>
+                                    </svg>
+                                </a>
+                           </li>
+                           <li  class="social-team">
+                               <a class="social-networks" href="">
+                                   <svg class="team-icon">
+                                       <use href="./images/icons.svg#icon-in" ></use>
+                                   </svg>
+                               </a>  
+                           </li>
+                       </ul>  
                     </div>
                     </li>
                     <li class=" foto-team">
@@ -199,26 +229,36 @@
                     <div class="text-position ">
                         <h3 class="position-title">Daniel Wilson</h3>
                         <p class="text-team">UI Designer</p>
-                        <a class="social-networks" href="">
-                            <svg class="team-icon">
-                                <use href="./images/icons.svg#icon-instagram" ></use>
-                            </svg>
-                        </a>
-                        <a class="social-networks" href="">
-                            <svg class="team-icon">
-                                <use href="./images/icons.svg#icon-twiter" ></use>
-                            </svg>
-                        </a>
-                        <a class="social-networks" href="">
-                            <svg class="team-icon">
-                                <use href="./images/icons.svg#icon-facebook" ></use>
-                            </svg>
-                        </a>
-                        <a class="social-networks" href="">
-                            <svg class="team-icon">
-                                <use href="./images/icons.svg#icon-in" ></use>
-                            </svg>
-                        </a>    
+                        <ul class="team-list">
+                            <li class="social-team ">
+                                <a class="social-networks" href="">
+                                    <svg class="team-icon">
+                                       <use href="./images/icons.svg#icon-instagram" ></use>
+                                    </svg>
+                                </a>
+                           </li>
+                           <li class="social-team ">
+                               <a class="social-networks" href="">
+                                   <svg class="team-icon">
+                                       <use href="./images/icons.svg#icon-twiter" ></use>
+                                   </svg>
+                               </a>
+                          </li>
+                          <li  class="social-team">
+                                <a class="social-networks" href="">
+                                    <svg class="team-icon">
+                                       <use href="./images/icons.svg#icon-facebook" ></use>
+                                    </svg>
+                                </a>
+                           </li>
+                           <li  class="social-team">
+                               <a class="social-networks" href="">
+                                   <svg class="team-icon">
+                                       <use href="./images/icons.svg#icon-in" ></use>
+                                   </svg>
+                               </a>  
+                           </li>
+                       </ul>  
                     </div>
                     </li>
                 </ul>
@@ -230,42 +270,42 @@
             <ul class="container-customers">
                 <li class="customers">
                     <a class="link-customers" href="">
-                        <svg class="customers-icon"  width="41px" hight="47px">
+                        <svg class="customers-icon"  width="41px" height="47px">
                             <use href="./images/icons.svg#ya-and-co "></use>
                         </svg>
                     </a>
                 </li>
                 <li class="customers">
                     <a class="link-customers" href="">
-                        <svg class="customers-icon" width="40px" hight="52px">
+                        <svg class="customers-icon" width="40px" height="52px">
                             <use href="./images/icons.svg#company-tagline-here" ></use>
                         </svg>
                     </a>
                 </li>
                 <li class="customers">
                     <a class="link-customers" href="">
-                        <svg class="customers-icon" width="44px" hight="41px">
+                        <svg class="customers-icon" width="44px" height="41px">
                             <use href="./images/icons.svg#company" ></use>
                         </svg>
                     </a>
                 </li>
                 <li class="customers">
                     <a class="link-customers" href="">
-                        <svg class="customers-icon"  width="84px" hight="41px">
+                        <svg class="customers-icon"  width="84px" height="41px">
                             <use href="./images/icons.svg#foster-peters" ></use>
                         </svg>
                     </a>
                 </li>
                 <li class="customers">
                     <a class="link-customers" href="">
-                        <svg class="customers-icon"  width="63px" hight="45px">
+                        <svg class="customers-icon"  width="63px" height="45px">
                             <use href="./images/icons.svg#brand" ></use>
                         </svg>
                     </a>
                 </li>
                 <li class="customers">
                     <a class="link-customers" href="">
-                        <svg class="customers-icon"  width="94px" hight="44px">
+                        <svg class="customers-icon"  width="94px" height="44px">
                             <use href="./images/icons.svg#compani-tag-line" ></use>
                         </svg>    
                     </a>
@@ -291,28 +331,28 @@
             </div>
             <ul class="footer-link">
             <li class="social-networks-footer">
-                <a class="" href="">
+                <a class="footer-link-icon" href="">
                 <svg class="footer-icon">
                     <use href="./images/icons.svg#icon-instagram" ></use>
                 </svg>
             </a>
             </li>
             <li class="social-networks-footer">
-            <a class="" href="">
+            <a class="footer-link-icon" href="">
                 <svg class="footer-icon">
                     <use href="./images/icons.svg#icon-twiter" ></use>
                 </svg>
             </a>
             </li>
             <li class="social-networks-footer">
-            <a class=""  href="">
+            <a class="footer-link-icon"  href="">
                 <svg class="footer-icon">
                     <use href="./images/icons.svg#icon-facebook" ></use>
                 </svg>
             </a>
             </li>
             <li class="social-networks-footer">
-            <a class="" href="">
+            <a class="footer-link-icon" href="">
                 <svg class="footer-icon">
                     <use href="./images/icons.svg#icon-in" ></use>
                 </svg>
