--- a/portfolio.html
+++ b/portfolio.html
@@ -182,28 +182,28 @@
             </div>
             <ul class="footer-link">
             <li class="social-networks-footer">
-                <a class="" href="">
+                <a class="footer-link-icon" href="">
                 <svg class="footer-icon">
                     <use href="./images/icons.svg#icon-instagram" ></use>
                 </svg>
             </a>
             </li>
             <li class="social-networks-footer">
-            <a class="" href="">
+            <a class="footer-link-icon" href="">
                 <svg class="footer-icon">
                     <use href="./images/icons.svg#icon-twiter" ></use>
                 </svg>
             </a>
             </li>
             <li class="social-networks-footer">
-            <a class=""  href="">
+            <a class="footer-link-icon"  href="">
                 <svg class="footer-icon">
                     <use href="./images/icons.svg#icon-facebook" ></use>
                 </svg>
             </a>
             </li>
             <li class="social-networks-footer">
-            <a class="" href="">
+            <a class="footer-link-icon" href="">
                 <svg class="footer-icon">
                     <use href="./images/icons.svg#icon-in" ></use>
                 </svg>
